# something

./: .gitignore  Cargo.toml  READMEm.md  creation_script.py  diff.txt  grammar.ebnf  main  main.c
crates/something-slib/: Cargo.toml
crates/something-slib/src/: lib.rs
parm_compiler/: Cargo.toml
parm_compiler/src/: lib.rs  main.rs  opts.rs
parm_compiler/src/ast/: mod.rs  prelude.rs  source_file.rs  traits.rs  tree_display.rs
parm_compiler/src/ast/error/: mod.rs
parm_compiler/src/ast/lexer/: mod.rs  token.rs
parm_compiler/src/ast/parser/: mod.rs  parse_stream.rs  token_stream.rs
parm_compiler/src/ast/parser/nodes/: attribute.rs  comment.rs  delimiter.rs  item.rs  mod.rs  path.rs  punctuated.rs
parm_compiler/src/ast/parser/nodes/declaration/: function.rs  struct_dec.rs  variable.rs
parm_compiler/src/ir/: code.rs  function.rs  impls.rs  ir.rs  ir_scope.rs  lower.rs  mod.rs  prelude.rs  registers.rs  state.rs  value.rs
parm_compiler/src/typechecker/: error.rs  impls.rs  mod.rs  prelude.rs  scope.rs  stdlib.rs  symbol.rs  tests.rs  traits.rs  ty.rs  types.rs
something-ast/: Cargo.toml  bin.rs  main.txt
something-ast/cases/: assignment_binary.txt  call.txt  call_binary.txt  expr.txt  fn.txt  fn_draft.txt  if.txt  lit.txt  punctuated_no_trailing.txt  punctuated_terminating.txt  var.txt
something-ast/examples/: fn.rs  src.txt  var.rs
something-ast/src/: attribute.rs  delimiter.rs  lib.rs  macros.rs  parser.rs  prelude.rs  punctuated.rs  statement.rs
something-ast/src/ast/: attribute.rs  delimiter.rs  mod.rs  path.rs  prelude.rs  punctuated.rs
something-ast/src/ast/declaration/: fnc.rs  mod.rs  var.rs
something-ast/src/ast/declaration/function/: mod.rs
something-ast/src/ast/delimiters/: mod.rs  paren.rs
something-ast/src/ast/expression/: block.rs  call.rs  if_expr.rs  mod.rs
something-ast/src/ast/punctuated/: mod.rs  omited_trailing.rs
something-ast/src/ast/statement/: mod.rs
something-ast/src/declaration/: function.rs  mod.rs  var.rs
something-ast/src/declaration/function/: mod.rs  return_type.rs
something-ast/src/error/: mod.rs
something-ast/src/expression/: block.rs  call.rs  if_expr.rs  mod.rs
something-ast/src/tokenizer/: ident.rs  list.rs  lit.rs  mod.rs  to_string.rs  token.rs  traits.rs
something-ast/tests/: fn.rs  mod.rs  punctuated.rs  var.rs
(+384 files in other folders)
