[package]
name = "parm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
toml = "0.8.8"
parm_ast = { path = "../parm_ast" }
parm_typechecker = { path = "../parm_typechecker" }
parm_ir = { path = "../parm_ir" }