[package]
name = "something-ast"
version = "0.1.0"
edition = "2021"
authors = ["Albert Hong <alberthong14@gmail.com>"]
description = "AST for Something"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "./bin/mod.rs"
name = "bin"
[dependencies]
something-frontend-tokenizer = { path = "../something-frontend-tokenizer" }
something-dev-tools = { path = "../something-dev-tools" }
clap = { version = "4.2.7", features = ["derive"] }
ctrlc = "3.2.5"
colored = "2.0.0"
